[package]
name = "wu-clib-demo"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[workspace]
members = ["xtask"]

[dependencies]
log = "*"
wu-clib = { path = "wu-clib-rs" }
wasm-bindgen = "*"
web-sys = "*"
easy-imgui-renderer = { path = "../easy-imgui-rs/easy-imgui-renderer" }
easy-imgui = { path = "../easy-imgui-rs/easy-imgui", features = ["docking"] }

