[package]
name = "wu-clib-demo"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[workspace]
members = ["xtask", "jpeg"]

[dependencies]
log = "*"
wu-clib = { path = "wu-clib-rs" }
wasm-bindgen = "*"
web-sys = "*"
easy-imgui-renderer = "0.16"
easy-imgui = "0.16"
jpeg = { path = "jpeg" }
